--- a/ICF.REST/package.json
+++ b/ICF.REST/package.json
@@ -18,6 +18,7 @@
     "method-override": "^2.3.6",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.10.2"
   }
 }
